# arma_numpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  arma_numpy.i  arma_numpy_test.hpp  arma_numpy_test.i  arma_numpy_test.py  numpy.i  run_tests.py  run_tests.sh  test.cpp  test.hpp  test.i  test.sh
test/: arma_numpy_test.cpp  arma_numpy_test.hpp
